--- a/style.css
+++ b/style.css
@@ -113,12 +113,12 @@ body{
   transform: scale(0.95);
 }
 @media(max-width: 800px){
-  #container{
+  .container{
     flex: 100%;
   }
 }
 @media(max-width: 400px){
-  #container{
+  .container{
     flex: 100%;
   }
 }
