--- a/style.css
+++ b/style.css
@@ -113,15 +113,10 @@ body{
   transform: scale(0.95);
 }
 @media(max-width: 800px){
-  .container{
+  *{
     flex: 100%;
   }
 }
-@media(max-width: 400px){
-  .container{
-    flex: 100%;
-  }
-}
-.container{
+*{
   flex-wrap: wrap;
 }
